<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_register"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".ui.register.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:elevation="0dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:titleTextColor="@android:color/white"
                android:elevation="0dp"/>

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/tv_register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/register"
            android:textSize="24sp"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/tv_register_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/montserrat"
            android:text="Daftar untuk melengkapi data"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/nama"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:boxBackgroundMode="none"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_nama"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_edittext"
                android:hint="@string/nama"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/jenis_kelamin"
            android:textSize="18sp"
            android:textColor="@color/black" />
        <RadioGroup
            android:id="@+id/rg_jekel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="horizontal"
            android:layout_marginEnd="20dp"
            >
            <RadioButton
                android:checked="true"
                android:buttonTint="@color/purple_500"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/laki_laki"
                android:id="@+id/rb_laki"/>
            <RadioButton
                android:buttonTint="@color/purple_500"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Perempuan"
                android:id="@+id/rb_perempuan"/>


        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/alamat"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:boxBackgroundMode="none"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_alamat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_edittext"
                android:hint="@string/alamat"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/instansi"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:boxBackgroundMode="none"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_sekolah"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_edittext"
                android:hint="@string/instansi"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/nomor_handphone"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:boxBackgroundMode="none"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_no_hp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_edittext"
                android:hint="@string/nomor_handphone"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/email"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:boxBackgroundMode="none"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_edittext"
                android:hint="@string/email"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/montserrat"
            android:text="Password"
            android:textSize="18sp"
            android:textColor="@color/black" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:endIconTint="@color/purple_700"
            app:endIconMode="password_toggle"
            app:boxBackgroundMode="none"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_edittext"
                android:hint="@string/password"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:background="@drawable/bg_button"
            android:text="@string/register"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            />

        <LinearLayout
            android:id="@+id/container_text"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sudah punya punya akun ?"
                android:textColor="@color/black"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/montserrat"/>
            <TextView
                android:id="@+id/tv_masuk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Masuk"
                android:textColor="@color/purple_500"
                android:fontFamily="@font/montserrat"/>

        </LinearLayout>
    </LinearLayout>


</androidx.core.widget.NestedScrollView>